--- a/Lightweight/Objects/Lightweight.build_log.htm
+++ b/Lightweight/Objects/Lightweight.build_log.htm
@@ -28,120 +28,6 @@ Project File Date:  04/15/2024
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 Note: source file '.\src\Pin\Pin.cpp' - object file renamed from '.\Objects\Pin.o' to '.\Objects\pin_1.o'.
-compiling Processing_coord.cpp...
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\time_service\time_service.h(13): warning:  #1-D: last line of file ends without a newline
-  }
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\Vec2b\Vec2b.h(23): warning:  #1-D: last line of file ends without a newline
-  #endif /* VEC2B_H_ */
-src\Processing_coord\Processing_coord.h(61): warning:  #1-D: last line of file ends without a newline
-  };
-src\Processing_coord\Processing_coord.cpp(7): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	downThreshold = 0.8 * DOWN_Y + DELTA_DIST;
-src\Processing_coord\Processing_coord.cpp(54): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	return adduct180(RAD2DEG * atan2(float(DIST_BETWEEN_GOALS - _y), float(-_x)) - 90);
-src\Processing_coord\Processing_coord.cpp(61): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	return Vec2b(u, adduct(atan2(float(pointY - _y), float(pointX - _x)) * RAD2DEG));
-src\Processing_coord\Processing_coord.cpp(77): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	float angLeft = atan2(float(LEFT_GOAL_THRESHOLD - _x), float(DIST_BETWEEN_GOALS - _y)) * RAD2DEG;
-src\Processing_coord\Processing_coord.cpp(78): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	float angRight = atan2(float(RIGHT_GOAL_THRESHOLD - _x), float(DIST_BETWEEN_GOALS - _y)) * RAD2DEG;
-src\Processing_coord\Processing_coord.cpp(100): warning:  #1-D: last line of file ends without a newline
-  }
-src\Processing_coord\Processing_coord.cpp: 12 warnings, 0 errors
-compiling Goalkeeper.cpp...
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\time_service\time_service.h(13): warning:  #1-D: last line of file ends without a newline
-  }
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\Vec2b\Vec2b.h(23): warning:  #1-D: last line of file ends without a newline
-  #endif /* VEC2B_H_ */
-.\src\Processing_coord\Processing_coord.h(61): warning:  #1-D: last line of file ends without a newline
-  };
-src\Goalkeeper\Goalkeeper.h(59): warning:  #1-D: last line of file ends without a newline
-  };
-src\Goalkeeper\Goalkeeper.cpp(22): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	_targetIMU = adduct180(RAD2DEG * atan2(float(_y), float(_x)) - 90);
-src\Goalkeeper\Goalkeeper.cpp(28): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	_targetIMU = RAD2DEG * atan2(float(_y), float(_x)) - 180;
-src\Goalkeeper\Goalkeeper.cpp(38): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
-src\Goalkeeper\Goalkeeper.cpp(49): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
-src\Goalkeeper\Goalkeeper.cpp(67): warning:  #177-D: variable "speed"  was declared but never referenced
-  		float err, speed;
-src\Goalkeeper\Goalkeeper.cpp(94): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
-src\Goalkeeper\Goalkeeper.cpp(119): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  			if (globalAngToBall > angGoal) res.angle = adduct(RAD2DEG * atan2(float(_y), float(_x)) + 90);
-src\Goalkeeper\Goalkeeper.cpp(120): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  			else res.angle = adduct(180 + RAD2DEG * atan2(float(_y), float(_x)) + 90);
-src\Goalkeeper\Goalkeeper.cpp(138): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  			if (globalAngToBall > angGoal) res.angle = adduct(180 + RAD2DEG * atan2(float(_y), float(_x)) - 90);
-src\Goalkeeper\Goalkeeper.cpp(139): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  			else res.angle = adduct(RAD2DEG * atan2(float(_y), float(_x)) - 90);
-src\Goalkeeper\Goalkeeper.cpp(199): warning:  #1-D: last line of file ends without a newline
-  }
-src\Goalkeeper\Goalkeeper.cpp: 19 warnings, 0 errors
-compiling Forward.cpp...
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\time_service\time_service.h(13): warning:  #1-D: last line of file ends without a newline
-  }
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\Vec2b\Vec2b.h(23): warning:  #1-D: last line of file ends without a newline
-  #endif /* VEC2B_H_ */
-.\src\Processing_coord\Processing_coord.h(61): warning:  #1-D: last line of file ends without a newline
-  };
-src\Forward\Forward.h(70): warning:  #1-D: last line of file ends without a newline
-  };
-src\Forward\Forward.cpp(44): warning:  #111-D: statement is unreachable
-  			break;
-src\Forward\Forward.cpp(47): warning:  #111-D: statement is unreachable
-  			break;
-src\Forward\Forward.cpp(50): warning:  #111-D: statement is unreachable
-  			break;
-src\Forward\Forward.cpp(53): warning:  #111-D: statement is unreachable
-  			break;
-src\Forward\Forward.cpp(56): warning:  #111-D: statement is unreachable
-  			break;
-src\Forward\Forward.cpp(59): warning:  #111-D: statement is unreachable
-  			break;
-src\Forward\Forward.cpp(79): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	float ang = atan2(float(y), float(x)) * RAD2DEG;
-src\Forward\Forward.cpp(84): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	float ang = atan2(float(DIST_BETWEEN_GOALS - y), float(x)) * RAD2DEG;
-src\Forward\Forward.cpp(90): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
-src\Forward\Forward.cpp(126): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	int16_t angGoal = RAD2DEG * atan2(float(DIST_BETWEEN_GOALS - _y), float(_x));
-src\Forward\Forward.cpp(133): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
-src\Forward\Forward.cpp(140): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
-src\Forward\Forward.cpp(147): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	int16_t angGoal = RAD2DEG * atan2(float(DIST_BETWEEN_GOALS - _y), float(_x));
-src\Forward\Forward.cpp(166): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
-src\Forward\Forward.cpp(202): warning:  #1-D: last line of file ends without a newline
-  }
-src\Forward\Forward.cpp: 23 warnings, 0 errors
 compiling main.cpp...
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
@@ -282,10 +168,10 @@ compiling main.cpp...
 .\src\Robot\Robot.h(238): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   			else if (dist > 9.17 && abs(ang) > 25) speedForward *= 0.9;
 .\src\Robot\Robot.h(364): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  		if (time_service::millis() - timeCalibrEnd < 2000 || myGoalkeeper.ballInBack(ang, local) || dist < 4.1
-.\src\Robot\Robot.h(400): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		if (time_service::millis() - timeCalibrEnd < 2000 || myGoalkeeper.ballInBack(ang, tsopRaw) || dist < 4.1
+.\src\Robot\Robot.h(398): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   				angToGoal = int16_t(RAD2DEG * atan2(float(y), float(x)));
-.\src\Robot\Robot.h(530): warning:  #1-D: last line of file ends without a newline
+.\src\Robot\Robot.h(526): warning:  #1-D: last line of file ends without a newline
   }
 src\main\main.cpp(14): warning:  #111-D: statement is unreachable
   	return 0;
@@ -293,8 +179,8 @@ src\main\main.cpp(15): warning:  #1-D: last line of file ends without a newline
   }
 src\main\main.cpp: 74 warnings, 0 errors
 linking...
-Program Size: Code=49854 RO-data=1430 RW-data=416 ZI-data=15912  
-".\Objects\Lightweight.axf" - 0 Error(s), 128 Warning(s).
+Program Size: Code=50014 RO-data=1430 RW-data=416 ZI-data=15912  
+".\Objects\Lightweight.axf" - 0 Error(s), 74 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -322,8 +208,8 @@ Package Vendor: Keil
    * Component: Keil::Device:Startup:2.6.3
       Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
       Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f407xx.s
-      Source file:   MDK/Device/Source/ARM/STM32F4xx_OTP.s
       Source file:   MDK/Device/Source/ARM/STM32F40xxx_41xxx_OPT.s
+      Source file:   MDK/Device/Source/ARM/STM32F4xx_OTP.s
       Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
 Build Time Elapsed:  00:00:02
 </pre>
