--- a/Lightweight/Objects/Lightweight.build_log.htm
+++ b/Lightweight/Objects/Lightweight.build_log.htm
@@ -27,23 +27,159 @@ Project File Date:  04/27/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling Button.cpp...
+compiling main.cpp...
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
+.\src\Pin\Pin.h(71): warning:  #1-D: last line of file ends without a newline
+  #endif /* PIN_H_ */
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart1\usart1.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart2\usart2.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart3\usart3.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart6\usart6.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usable\usable.h(36): warning:  #1-D: last line of file ends without a newline
+  #endif /* USABLE_H_ */
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\adc\adc.h(25): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\dma\dma.h(19): warning:  #1-D: last line of file ends without a newline
+  };
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
 .\src\time_service\time_service.h(13): warning:  #1-D: last line of file ends without a newline
   }
-.\src\Pin\Pin.h(71): warning:  #1-D: last line of file ends without a newline
-  #endif /* PIN_H_ */
-src\Button\Button.h(24): warning:  #1-D: last line of file ends without a newline
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Motor\Motor.h(16): warning:  #1-D: last line of file ends without a newline
   };
-src\Button\Button.cpp(30): warning:  #1-D: last line of file ends without a newline
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_1\SPI_1.h(34): warning:  #1-D: last line of file ends without a newline
   }
-src\Button\Button.cpp: 6 warnings, 0 errors
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\omniplatform\omniplatform.h(17): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\IMU_USART\IMU_USART.h(42): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\OpenMV\OpenMV.h(9): warning:  #47-D: incompatible redefinition of macro "RAD2DEG"  (declared at line 6 of ".\src\omniplatform\omniplatform.h")
+  #define RAD2DEG	57.2957795130823208767f
+.\src\OpenMV\OpenMV.h(10): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 7 of ".\src\omniplatform\omniplatform.h")
+  #define DEG2RAD	0.017453292519943295769f
+.\src\OpenMV\OpenMV.h(38): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\TSOP\TSOP.h(7): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 10 of ".\src\OpenMV\OpenMV.h")
+  #define DEG2RAD	0.01745329251994329576f
+.\src\TSOP\TSOP.h(31): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\I2C\I2C.h(28): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\IR_Locator\IR_Locator.h(25): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Vec2b\Vec2b.h(8): warning:  #47-D: incompatible redefinition of macro "RAD2DEG"  (declared at line 6 of ".\src\TSOP\TSOP.h")
+  #define RAD2DEG	57.2957795130823208767
+.\src\Vec2b\Vec2b.h(9): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 7 of ".\src\TSOP\TSOP.h")
+  #define DEG2RAD	0.01745329251994329576
+.\src\Vec2b\Vec2b.h(24): warning:  #1-D: last line of file ends without a newline
+  #endif /* VEC2B_H_ */
+.\src\Queues_ball\Queues_ball.h(67): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Processing_coord\Processing_coord.h(62): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Forward\Forward.h(71): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Goalkeeper\Goalkeeper.h(59): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\flash\flash.h(16): warning:  #111-D: statement is unreachable
+    FLASH_Lock();
+.\src\flash\flash.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Voltage\Voltage.h(18): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Button\Button.h(24): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\libraries.h(34): warning:  #1-D: last line of file ends without a newline
+  #include "BallSensor.h"
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\BallSensor\BallSensor.h(20): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\Robot\Robot.h(261): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			} else if (dist > 9.17 && abs(ang) > 25) speedForward *= 0.9;
+.\src\Robot\Robot.h(274): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		if (ballGrip || (abs(ang) <= 15 && dist > 9.5)) { 
+.\src\Robot\Robot.h(283): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		if (!(ballGrip || dist > 7.9 && abs(ang) <= 25)) {
+.\src\Robot\Robot.h(421): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  				angToGoal = int16_t(RAD2DEG * atan2(float(y), float(x)));
+.\src\Robot\Robot.h(582): warning:  #1-D: last line of file ends without a newline
+  }
+src\main\main.cpp(31): warning:  #111-D: statement is unreachable
+  	return 0;
+src\main\main.cpp(32): warning:  #1-D: last line of file ends without a newline
+  }
+src\main\main.cpp: 74 warnings, 0 errors
 linking...
-Program Size: Code=51662 RO-data=1430 RW-data=432 ZI-data=16088  
-".\Objects\Lightweight.axf" - 0 Error(s), 6 Warning(s).
+Program Size: Code=51782 RO-data=1430 RW-data=432 ZI-data=16088  
+".\Objects\Lightweight.axf" - 0 Error(s), 74 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -69,9 +205,9 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.6.0
 
    * Component: Keil::Device:Startup:2.6.3
-      Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\arm\startup_stm32f407xx.s
-      Source file:   MDK\Device\Source\ARM\STM32F40xxx_41xxx_OPT.s
       Source file:   MDK\Device\Source\ARM\STM32F4xx_OTP.s
+      Source file:   MDK\Device\Source\ARM\STM32F40xxx_41xxx_OPT.s
+      Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\arm\startup_stm32f407xx.s
       Include file:  Drivers\CMSIS\Device\ST\STM32F4xx\Include\stm32f4xx.h
       Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\system_stm32f4xx.c
 Build Time Elapsed:  00:00:02
